# controllers/buildings.go
@@ -11,49 +11,49 @@ import (
 	"github.com/labstack/echo"
 )
 
-func GetAllBuildings(c echo.Context) error {
+func GetAllBuildings(context echo.Context) error {
 	allBuildings, err := elastic.GetAllBuildings()
 	if err != nil {
-		return c.JSON(http.StatusBadRequest, helpers.ReturnError(err))
+		return context.JSON(http.StatusBadRequest, helpers.ReturnError(err))
 	}
 
 	// Add HATEOAS links
 	for i := range allBuildings.Buildings {
-		links, err := hateoas.AddLinks(c.Path(), []string{allBuildings.Buildings[i].Building})
+		links, err := hateoas.AddLinks(context.Path(), []string{allBuildings.Buildings[i].Building})
 		if err != nil {
-			return c.JSON(http.StatusBadRequest, helpers.ReturnError(err))
+			return context.JSON(http.StatusBadRequest, helpers.ReturnError(err))
 		}
 
 		allBuildings.Buildings[i].Links = links
 	}
 
-	return c.JSON(http.StatusOK, allBuildings)
+	return context.JSON(http.StatusOK, allBuildings)
 }
 
-func GetBuildingByName(c echo.Context) error {
+func GetBuildingByName(context echo.Context) error {
 	allRooms, err := fusion.GetAllRooms()
 	if err != nil {
-		return c.JSON(http.StatusBadRequest, helpers.ReturnError(err))
+		return context.JSON(http.StatusBadRequest, helpers.ReturnError(err))
 	}
 
 	// Remove rooms that are not in the asked-for building
 	for i := len(allRooms.Rooms) - 1; i >= 0; i-- {
 		roomBuilding := strings.Split(allRooms.Rooms[i].Name, " ")
 
-		if roomBuilding[0] != c.Param("building") {
+		if roomBuilding[0] != context.Param("building") {
 			allRooms.Rooms = append(allRooms.Rooms[:i], allRooms.Rooms[i+1:]...)
 		}
 	}
 
 	// Add HATEOAS links
 	for i := range allRooms.Rooms {
-		links, err := hateoas.AddLinks(c.Path(), []string{c.Param("building")})
+		links, err := hateoas.AddLinks(context.Path(), []string{context.Param("building")})
 		if err != nil {
-			return c.JSON(http.StatusBadRequest, helpers.ReturnError(err))
+			return context.JSON(http.StatusBadRequest, helpers.ReturnError(err))
 		}
 
 		allRooms.Rooms[i].Links = links
 	}
 
-	return c.JSON(http.StatusOK, allRooms)
+	return context.JSON(http.StatusOK, allRooms)
 }
